[project]
name = "adjust"
version = "0.1.0"
description = ""
authors = [
    {name = "rshibaki",email = "ryota.shibaki@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "lifelines (>=0.30.0,<0.31.0)",
    "rpy2 (>=3.5.17,<4.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "seaborn (>=0.13.2,<0.14.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
